# t-bo

./: Cargo.toml
src/: checks.rs  commands.rs  main.rs  msgutils.rs  notifiers.rs  palette.rs  tboresult.rs
src/command_handlers/: mod.rs
src/command_handlers/media/: mod.rs  play.rs  skip.rs
src/command_handlers/selfutils/: mod.rs
src/command_handlers/voice/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs
src/commands/: media.rs  mod.rs  voice.rs
src/utils/: mediautils.rs  mod.rs  msgutils.rs
