[package]
name = "t-bo"
version = "0.1.0"
authors = ["me"]
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
url = "2.2"

[dependencies.songbird]
version = "0.2"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
